feat: add a new parameter `envId` to `/metrics/builds` endpoint
EPMDJ-11028
